--- a/style.css
+++ b/style.css
@@ -45,98 +45,87 @@
   --fw-bold-set-two: 700;
 }
 
-body {
+/* body {
   font-family: var(--ff-set-one);
   font-size: var(--fs-default);
   font-weight: var(--fw-regular-set-one);
-}
+} */
 
-.navbar {
-  padding: 0;
+/* .navbar {
   margin-top: 3.5rem;
-  position: absolute;
-  width: 100%;
-}
-
-.navbar-brand {
-  padding: 0;
-  width: 5.1875rem;
-}
-
-.navbar-brand img {
-  width: 100%;
 }
 
 .navbar .container-fluid {
   width: 84.375%;
-  padding: 0;
+} */
+
+/* .navbar-brand {
+  width: 5.1875rem;
 }
 
 #close {
   display: none;
-  width: 100%;
 }
 
 .navbar-toggler:focus {
   box-shadow: none;
-}
+} */
 
-#navmenu {
+/* #navmenu {
   margin-top: 2.25rem;
   background-color: var(--white);
-  border-radius: 5px;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3);
-}
+} */
 
-.nav-link.main {
+/* .nav-link.main {
   margin-bottom: 0.75rem;
-}
+} */
 
-.arrow {
+/* .arrow {
   content: url(images/icon-arrow-dark.svg);
   vertical-align: middle;
-}
+} */
 
-.nav-link.main[aria-expanded="true"] .arrow {
+/* .nav-link.main[aria-expanded="true"] .arrow {
   transform: rotate(180deg);
-}
+} */
 
-.navbar-light .navbar-nav .nav-link[aria-expanded="true"] {
+/* .navbar-light .navbar-nav .nav-link[aria-expanded="true"] {
   color: var(--very-dark-blue-75);
-}
+} */
 
-.navbar-light .navbar-nav .nav-link[aria-expanded="false"]:focus {
+/* .navbar-light .navbar-nav .nav-link[aria-expanded="false"]:focus {
   color: var(--very-dark-blue);
-}
+} */
 
-.navbar-light .navbar-nav .nav-link {
+/* .navbar-light .navbar-nav .nav-link {
   font-family: inherit;
   font-size: var(--fs-default);
   font-weight: var(--fw-bold-set-one);
   text-decoration: none;
   color: var(--very-dark-blue);
-}
+} */
 
-.navbar-light .navbar-nav .nav-link:hover {
+/* .navbar-light .navbar-nav .nav-link:hover {
   color: var(--very-dark-blue-75);
-}
-
+} */
+/* 
 .navbar-light .navbar-nav .nav-link.secondary {
   color: var(--very-dark-blue-75);
-}
+} */
 
-.nav-links {
+/* .nav-links {
   border-radius: 5px;
   background-color: hsl(240, 7%, 94%);
-}
+} */
 
-.user-logged-out {
+/* .user-logged-out {
   padding: 1.25rem 0;
   margin-bottom: 0.75rem;
   border-top: 1px solid var(--grayish-blue-50);
-}
+} */
 
-.user-logged-out button {
+/* .user-logged-out button {
   font-weight: var(--fw-bold-set-one);
   color: var(--very-dark-blue);
   border: none;
@@ -144,66 +133,66 @@ body {
   width: 8.5625rem;
   height: 3rem;
   border-radius: 30px;
-}
-
+} */
+/* 
 #signup {
   margin-top: 0.5rem;
   color: var(--white);
   background-image: var(--red-gradient-to-right);
   font-weight: var(--fw-bold-set-one);
-}
+} */
 
-.showcase {
+/* .showcase {
   padding-top: 12.625rem;
   padding-bottom: 9.688rem;
   text-align: center;
   color: white;
   background: url(images/bg-pattern-intro.svg) no-repeat,
     var(--red-gradient-default) no-repeat;
-  /* 1205x1205 */
+  /* 1205x1205 
   background-size: 321%;
   background-position-y: 32%;
   background-position-x: left 36%;
   border-radius: 0 0 0 100px;
-}
+} */
 
-.h1,
+/* .h1,
 h1 {
   font-size: calc(1.837rem + 1.5vw);
   letter-spacing: -0.125rem;
   line-height: 1.197em;
-}
+} */
 
 .h2, h2 {
   font-size: calc(1.4771rem + .9vw);
   font-weight: var(--fw-bold-set-one);
   line-height: 1em;
 }
-
+/* 
 .showcase h1 {
   font-weight: var(--fw-bold-set-one);
   margin-bottom: 1.375rem;
   width: 12ch;
-}
+} */
 
-.showcase p {
+/* .showcase p {
   font-weight: var(--fw-regular-set-one);
   color: var(--white-75);
   font-size: 1.125rem;
   line-height: 1.278em;
   margin-bottom: 2.833rem;
-}
+} */
 
-.showcase-btn {
+/* .showcase-btn {
   padding-top: 8px;
   border-radius: 30px;
   font-weight: var(--fw-bold-set-one);
   line-height: 0;
   height: 3rem;
   width: 8.5625rem;
-}
+} */
 
-#start {
+/* #start {
   color: var(--light-red);
   background-color: var(--white);
 }
@@ -216,20 +205,20 @@ h1 {
 #learn:hover {
   color: var(--light-red);
   background-color: var(--white);
-}
+} */
 
-.designed-for-future {
+/* .designed-for-future {
   color: var(--very-dark-blue);
   padding: 6.625rem 0;
   margin-bottom: 7.531rem;
   overflow-x: hidden;
-}
+} */
 
-.designed-for-future > h2 {
+/* .designed-for-future > h2 {
   margin-bottom: 2.938rem;
-}
+} */
 
-.designed-for-future .inner-section {
+/* .designed-for-future .inner-section {
   width: 75%;
 }
 
@@ -246,13 +235,13 @@ h1 {
   line-height: 1.732em;
   letter-spacing: 0.03em;
   color: var(--very-dark-blue-75);
-}
+} */
 
-.designed-for-future img {
+/* .designed-for-future img {
   margin-bottom: 3.063rem;
-}
+} */
 
-.art-infrastructure {
+/* .art-infrastructure {
   background: url(images/bg-pattern-circles.svg) no-repeat, var(--vdgray-blue-to-vddesaturated-blue);
   background-size: cover;
   background-position: top -15rem center, center;
@@ -260,10 +249,10 @@ h1 {
   padding-bottom: 7.125rem;
   color: var(--white);
   /* 106padding + 39.504margin + 6 line height */
-  /* 272 difference by section */
-}
+  /* 272 difference by section 
+} */
 
-.art-infrastructure img {
+/* .art-infrastructure img {
   width: 100%;
   margin-top: -11.938rem;
   margin-bottom: 1.063rem;
@@ -285,7 +274,7 @@ h1 {
   line-height: 1.732em;
   letter-spacing: 0.03em;
   margin-bottom: 0;
-}
+} */
 
 .attribution {
   font-size: 11px;
@@ -294,7 +283,7 @@ h1 {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
-
+/* 
 @media (min-width: 576px) {
   .showcase {
     background-position-y: 35%;
@@ -304,58 +293,58 @@ h1 {
     margin-bottom: 1.375rem;
     width: 100%;
   }
-}
+} */
 
 @media (min-width: 992px) {
-  body {
+  /* body {
     background-color: var(--gray);
-  }
+  } */
 
-  .navbar .container-fluid {
+  /* .navbar .container-fluid {
     width: 77.4193%;
     padding: 0;
-  }
+  } */
 
-  .navbar-brand {
+  /* .navbar-brand {
     padding: 0;
     width: 6.375rem;
-  }
+  } */
 
-  .navbar .container-fluid {
+  /* .navbar .container-fluid {
     width: 76.945%;
     padding: 0;
-  }
+  } */
 
-  #navmenu {
+  /* #navmenu {
     margin-top: 1rem;
     background-color: transparent;
     border-radius: 0;
     box-shadow: none;
-  }
-
+  } */
+/* 
   .navbar-light .navbar-nav .nav-link.main {
     color: var(--white);
-  }
+  } */
 
-  .navbar-light .navbar-nav .nav-link.main:hover,
+  /* .navbar-light .navbar-nav .nav-link.main:hover,
   .navbar-light .navbar-nav .nav-link.main[aria-expanded="true"] {
     text-decoration: underline;
     color: var(--white);
-  }
+  } */
 
-  .navbar-light .navbar-nav .nav-link[aria-expanded="false"]:focus {
+  /* .navbar-light .navbar-nav .nav-link[aria-expanded="false"]:focus {
     color: var(--white);
-  }
+  } */
 
-  .navbar-light .navbar-nav .nav-link.secondary {
+  /* .navbar-light .navbar-nav .nav-link.secondary {
     color: var(--very-dark-blue);
-  }
+  } */
 
-  .navbar-light .navbar-nav .nav-link.secondary:hover {
+  /* .navbar-light .navbar-nav .nav-link.secondary:hover {
     color: var(--very-dark-black-blue);
-  }
+  } */
 
-  .nav-links {
+  /* .nav-links {
     position: absolute;
     background-color: var(--white);
     width: 10rem;
@@ -363,96 +352,96 @@ h1 {
 
   .nav-links a {
     text-align: left;
-  }
+  } */
 
-  .arrow {
+  /* .arrow {
     content: url(images/icon-arrow-light.svg);
-  }
+  } */
 
-  .navbar-light .navbar-nav .nav-link {
+  /* .navbar-light .navbar-nav .nav-link {
     color: var(--very-grayish-blue);
   }
 
   .navbar-light .navbar-nav .nav-link:hover {
     color: var(--very-dark-black-blue);
-  }
+  } */
 
-  .user-logged-out {
+  /* .user-logged-out {
     padding: 0;
     margin-bottom: 0;
     border-top: none;
-  }
-
+  } */
+/* 
   .user-logged-out button {
     color: var(--white);
-  }
+  } */
 
-  #login:hover {
+  /* #login:hover {
     color: rgb(221, 221, 221);
-  }
+  } */
 
-  #signup {
+  /* #signup {
     margin-top: 0;
     color: var(--light-red);
     background-image: none;
     background-color: var(--white);
-  }
+  } */
 
-  #signup:hover {
+  /* #signup:hover {
     color: var(--very-light-red);
-  }
+  } */
 
-  .h1,
+  /* .h1,
   h1 {
     font-size: calc(2.65rem + 1.5vw);
     letter-spacing: -0.125rem;
     line-height: 1em;
-  }
+  } */
 
   .h2, h2 {
     font-size: calc(1.63rem + .9vw);
   }
 
-  .showcase {
+  /* .showcase {
     padding-top: 15.188rem;
     padding-bottom: 9.5rem;
     background: url(images/bg-pattern-intro.svg) center no-repeat,
       var(--red-gradient-to-right);
     background-position-x: left 25%;
-  }
+  } */
 
-  .showcase h1 {
+  /* .showcase h1 {
     font-weight: var(--fw-bold-set-one);
     margin-bottom: 1.5rem;
-  }
+  } */
 
-  .showcase p {
+  /* .showcase p {
     line-height: 1em;
     font-size: 1.375rem;
-  }
+  } */
 
-  .designed-for-future {
+  /* .designed-for-future {
     padding: 9.938rem 0;
-  }
+  } */
 
-  .designed-for-future > h2 {
+  /* .designed-for-future > h2 {
     margin-bottom: 7.063rem;
-  }
+  } */
 
-  .designed-for-future img {
+  /* .designed-for-future img {
     margin-bottom: 0;
     position: absolute;
     top: 4.438rem;
     right: -17rem;
     z-index: -1;
     height: auto;
-  }
+  } */
 
-  .designed-for-future > div {
+  /* .designed-for-future > div {
     width: 76.95%;
-  }
+  } */
 
-  .designed-for-future .inner-section {
+  /* .designed-for-future .inner-section {
     align-self: flex-start;
     background-image: var(--gray-gradient-to-right);
     border-radius: 10px;
@@ -470,6 +459,6 @@ h1 {
   .designed-for-future .inner-section p {
     text-align: left;
     max-width: 55.5ch;
-  }
+  } */
 
 }
